# music-room

./: .gitignore  CMakeLists.txt  music-room.cpp  music-room.h
src/: client.cpp  music.cpp  rooms.cpp  server.cpp  vote.cpp
src/headers/: client.hpp  music.hpp  rooms.hpp  server.hpp  vote.hpp
